--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span>Simple CRM</span>
+    <span>Beispiel</span>
   </mat-toolbar-row>
 </mat-toolbar>
