--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,27 @@
-<mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <span>Simple CRM</span>
-  </mat-toolbar-row>
-</mat-toolbar>
+<mat-drawer-container class="mat-drawer-container" autosize>
+  <mat-drawer #drawer class="side-nav" [opened]="true" mode="side">
+    <div class="logo-container">
+      Auto-resizing sidenav
+    </div>
+
+    <ul class="menu-items">
+      <li routerLink = "/"><mat-icon>dashboard</mat-icon>Dashboard</li>
+      <li routerLink = "/user"><mat-icon>person</mat-icon>User</li>
+    </ul>
+  </mat-drawer>
+
+  <div class="example-sidenav-content">
+    <mat-toolbar color="primary">
+      <mat-toolbar-row>
+        <mat-icon class="cursorPointer" (click)="drawer.toggle()"> menu </mat-icon>
+        <span>Simple CRM</span>
+      </mat-toolbar-row>
+    </mat-toolbar>
+
+    <div class="router-container">
+      <router-outlet></router-outlet>
+    </div>
+    
+  </div>
+</mat-drawer-container>
+ 
