--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,55 +3,60 @@
 }
 
 .cursorPointer {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .side-nav {
-    width: 300px;
+  width: 300px;
 }
 
 .logo-container {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.04);
-    padding-left: 16px;
-    padding-right: 16px;
-    min-height: 56px;
-    display: flex;
-    align-items: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.04);
+  padding-left: 16px;
+  padding-right: 16px;
+  min-height: 56px;
+  display: flex;
+  align-items: center;
 }
 
-mat-toolbar, mat-toolbar-row {
-    min-height: 56px;
-    height: 56px;
+mat-toolbar,
+mat-toolbar-row {
+  min-height: 56px;
+  height: 56px;
 }
 
 .menu-items {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 
-    li {
-        padding-left: 16px;
-        padding-right: 16px;
-        height: 48px;
-        display: flex;
-        align-items: center;
-        cursor: pointer;
+  li {
+    padding-left: 16px;
+    padding-right: 16px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
 
-        mat-icon {
-            margin-right: 16px;
-        }
-
-        &:hover {
-            background-color: rgba(0, 0, 0, 0.04);
-        }
-
-        &:focus {
-            outline: none;
-        }
+    mat-icon {
+      margin-right: 16px;
     }
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.04);
+    }
+
+    &:focus {
+      outline: none;
+    }
+  }
 }
 
 .router-container {
-    padding-left: 56px;
-    padding-top: 16px;
+  padding-left: 56px;
+  padding-top: 16px;
+}
+
+.mr-16 {
+  margin-right: 16px;
 }
