--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Add User</h2>
 <mat-dialog-content>
-  <div>
+  <div class="mt-10">
     <mat-form-field class="mr-16" appearance="outline">
       <mat-label>First name</mat-label>
       <input [(ngModel)]="user.firstName" matInput placeholder="Placeholder" />
